# turnkey_c_lang

./: .gitignore  CMakeLists.txt  README.md  c.makefile  cpp.makefile  makefile  tags  update_version_h.post-commit
doc/: Doxyfile
include/: CMakeLists.txt
lib/: CMakeLists.txt
lib/version/: CMakeLists.txt
lib/version/include/: version.h
lib/version/src/: injected_version.h.in  version.c
lib/version/test/: CMakeLists.txt  test_version.cpp
src/: CMakeLists.txt  hi.h  main.c  main.cpp  main.h  test.cpp  test.h  version.h
test/: CMakeLists.txt  null_class.h  null_test.cpp  test1.c  test1.cpp  test2.c  test2.cpp  test3.cpp  test_turnkey.cpp
